initialized game.cpp and adder renderer

--- a/Android/app/src/main/cpp/CMakeLists.txt
+++ b/Android/app/src/main/cpp/CMakeLists.txt
@@ -9,7 +9,8 @@ project("tinypotionfactory")
 # one used for loading in your Kotlin/Java or AndroidManifest.txt files.
 add_library(tinypotionfactory SHARED
         main.cpp
-        Game.cpp)
+        Game.cpp
+        Renderer.cpp)
 
 # Searches for a package provided by the game activity dependency
 find_package(game-activity REQUIRED CONFIG)
