--- a/Android/app/src/main/cpp/CMakeLists.txt
+++ b/Android/app/src/main/cpp/CMakeLists.txt
@@ -10,7 +10,8 @@ project("tinypotionfactory")
 add_library(tinypotionfactory SHARED
         main.cpp
         Game.cpp
-        Renderer.cpp)
+        Renderer.cpp
+        Shader.cpp)
 
 # Searches for a package provided by the game activity dependency
 find_package(game-activity REQUIRED CONFIG)
