--- a/Android/app/src/main/cpp/CMakeLists.txt
+++ b/Android/app/src/main/cpp/CMakeLists.txt
@@ -10,6 +10,7 @@ project("tinypotionfactory")
 add_library(tinypotionfactory SHARED
         main.cpp
         Game.cpp
+        Renderer.cpp
 )
 
 # Searches for a package provided by the game activity dependency
