--- a/Android/app/src/main/cpp/CMakeLists.txt
+++ b/Android/app/src/main/cpp/CMakeLists.txt
@@ -7,11 +7,14 @@ project("tinypotionfactory")
 
 # Creates your game shared library. The name must be the same as the
 # one used for loading in your Kotlin/Java or AndroidManifest.txt files.
+
 add_library(tinypotionfactory SHARED
         main.cpp
         Game.cpp
         Renderer.cpp
 )
+
+add_subdirectory(glm)
 
 # Searches for a package provided by the game activity dependency
 find_package(game-activity REQUIRED CONFIG)
@@ -20,6 +23,8 @@ find_package(game-activity REQUIRED CONFIG)
 target_link_libraries(tinypotionfactory
         # The game activity
         game-activity::game-activity
+
+        glm
 
         # EGL and other dependent libraries required for drawing
         # and interacting with Android system
