added image rendering to render.cpp

--- a/Android/app/src/main/cpp/CMakeLists.txt
+++ b/Android/app/src/main/cpp/CMakeLists.txt
@@ -12,6 +12,7 @@ add_library(tinypotionfactory SHARED
         main.cpp
         Game.cpp
         Renderer.cpp
+        Texture.cpp
 )
 
 add_subdirectory(glm)
