fixed compile errors

--- a/Android/app/src/main/cpp/CMakeLists.txt
+++ b/Android/app/src/main/cpp/CMakeLists.txt
@@ -13,6 +13,9 @@ add_library(tinypotionfactory SHARED
         Game.cpp
         Renderer.cpp
         Texture.cpp
+        DisplayCameraAndroid.cpp
+        ImageStore.cpp
+        ImageAndroid.cpp
 )
 
 add_subdirectory(glm)
